# email-server

./: .env  Cargo.toml  READMD.md  configurations.yaml
migrations/: 20241113144629_User.sql  20241119114416_create_subscriptions_table.sql  20241122140837_update_subscriptions_id.sql
src/: configurations.rs  lib.rs  main.rs
tests/: health_check.rs  tests.py
