[package]
name = "emailserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
config = "0.14.1"
env_logger = "0.11.7"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive","serde_derive"] }
sqlx = { version = "0.8.2", features = ["default", "mysql", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0",features=['v4']}


[lib]
path="src/lib.rs"
